# ray-tracer

./: .gitignore  CApp.cpp  CApp.h  CMakeLists.txt  Makefile  a  main.cpp
RayTrace/: Camera.cpp  Camera.hpp  Gtfm.cpp  Gtfm.hpp  Image.cpp  Image.hpp  LightBase.cpp  LightBase.hpp  ObjPlane.cpp  ObjPlane.hpp  ObjSphere.cpp  ObjSphere.hpp  ObjectBase.cpp  ObjectBase.hpp  PointLight.cpp  PointLight.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp
